<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyLittleWallpaper</string>
    <string name="description">My Little Pony</string>
    <string name="pony_manager">Pony Manager</string>    
    <plurals name="numberOfPoniesForAction">
        <item quantity="one">%1$s 1 Pony?</item>
        <item quantity="other">%1$s %2$d Ponies?</item>
    </plurals> 
    <string name="manager_help">Help</string>
    <string name="manager_update">Update</string>
    <string name="manager_update_all">Update all</string>
    <string name="manager_download">Download</string>
    <string name="manager_download_all">Download all</string>
    <string name="background_settings">Background Settings</string>
    <string name="background_color_title">Select Background Color</string>
    <string name="background_global_title">Use custom Background</string>
    <string name="background_image_title">Select Background Image</string>
    <string name="interact_user_title">User Interaction</string>
    <string name="interact_user_summary">Touch pony to lock in place</string>
    <string name="interact_pony_title">Pony Interaction</string>
    <string name="interact_pony_summary">Ponies interact with each other</string>
    <string name="pony_settings_title">Ponies</string>
    <string name="pony_select_title">Select Ponies</string>
    <string name="pony_select_summary">Choose which ponies should be displayed\n(More ponies equals more CPU usage)</string>
    <string name="framerate_cap_title">Target Framerate</string>
    <string name="framerate_cap_summary">Higher Framerate means higher CPU usage</string>
    <string name="pony_scale_title">Scale</string>
    <string name="pony_scale_summary">Resize the ponies</string>
    <string name="more_settings_title">More</string>
    <string name="more_link_title">Visit</string>
    <string name="more_donate_paypal_title">Donate (PayPal)</string>
    <string name="more_donate_paypal_summary">Support this App</string>
    <string name="debug_info_title">Show Debug info</string>
    <string name="debug_info_summary">Show Framerate and Errors in topleft corner</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="no_crop_app">Can not find image crop app</string>
    <string name="error_custom_image">There was an error saving your custom image</string>
    <string name="no_ponies_selected">No ponies selected. Go to settings</string>
    <string name="debug_text">%1$s / %2$d ponies active / Scale %3$.2f / %4$d FPS (max %5$d)</string>
    <string name="pony_state_update">•</string>
    <string name="pony_state_installed">•</string>
    <string name="pony_state_not_installed">•</string>
    <string name="pony_state_local_only">•</string>
    <string name="pony_state_loading">•</string>
    <string name="pony_info_loading">Files: %1$d / %2$d</string>
    <string name="pony_info">Files: %1$d Size: %2$s</string>
    <string name="info_hint_title">Info</string>
    <string name="info_hint_text_summary">If the wallpaper crashes try to use less ponies.\nIf the wallpaper drains to much battery or slows down your phone, try to lower to framerate and turn off effects.</string>
    <string name="show_effects_title">Show effects</string>
    <string name="show_effects_summary">Adds extra effects to some animations</string>
    <string name="no_ponies_installed">You seem to have no ponies installed. We have to change that...</string>
    <string name="force_local_storage_title">Store ponies intern</string>
    <string name="force_local_storage_summary">Current folder: %1$s</string>  
    <string name="help_text">&quot;&lt;img src='arrowdown_download' /&gt; Download all currently not installed Ponies&lt;br&gt;&lt;img src='arrowdown_update' /&gt; Updates all Ponies with an update achievable&lt;br&gt;&lt;img src='ic_menu_set_as' /&gt; Sets live wallpaper&lt;br&gt;&lt;br&gt;&lt;br&gt;The colored dots indicate different states of a Pony&lt;br /&gt;The state can be:&lt;br /&gt;&lt;font color='#ff0000'&gt;&lt;b&gt;•&lt;/b&gt; Pony is not installed&lt;/font&gt; &lt;br /&gt;&lt;font color='#FF7E00'&gt;&lt;b&gt;•&lt;/b&gt; Pony is currently downloaded&lt;/font&gt;&lt;br /&gt;&lt;font color='#00ff00'&gt;&lt;b&gt;•&lt;/b&gt; Pony is installed&lt;/font&gt;&lt;br /&gt;&lt;font color='#0000ff'&gt;&lt;b&gt;•&lt;/b&gt; The is an update for this Pony&lt;/font&gt;&lt;br /&gt;&lt;font color='#00ffff'&gt;&lt;b&gt;•&lt;/b&gt; Pony is on the assets-server&lt;/font&gt;&lt;br /&gt;&quot;</string>
    <string name="display_settings_title">Display Settings</string>    
    <string name="manager_delete_title">Delete %1$s?</string>   
    <string name="manager_delete_message">Are you sure you want to delete %1$s?</string>
    <string name="set_wallpaper">Choose &quot;MyLittleWallpaper&quot; from the list to set the wallpaper</string>
    <string name="show_effects_warning_message">Effects can cause the wallpaper to become unstable!\nThey also need more cpu power and can drain the battery faster.</string>
    <string name="show_effects_warning_title">Warning</string>
    <string name="force_local_storage_warning_title">Warning</string>
    <string name="force_local_storage_warning_message">force_local_storage_warning_message</string>
   	<string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="disable_swipe_title">Disable Swipe</string>
    <string name="disable_wallpaper_scrolling_title">Disable wallpaper scrolling</string>
    <string name="disable_wallpaper_scrolling_summary">Turn off side scrolling</string>
    <string name="warning_too_much_pony">You are about to use a lot of ponies.\nIf the app gets laggy or crashes a lot, please use less ponies!</string>
</resources>
