<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  	<ImageView android:layout_height="wrap_content" android:src="@drawable/ponytemp" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/imagePony" android:layout_alignBottom="@+id/textState" android:scaleType="fitCenter"></ImageView>
    <TextView android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/imagePony" android:id="@+id/textName" android:layout_width="fill_parent" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/app_name"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_below="@+id/textName" android:layout_alignLeft="@+id/textName" android:id="@+id/textState" android:text="@string/pony_state_not_installed" android:layout_height="20dp" android:lines="1" android:lineSpacingMultiplier="1" android:textSize="25dp" android:gravity="bottom" android:lineSpacingExtra="-7dp"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_alignTop="@+id/textState" android:id="@+id/textDivider" android:text="|" android:layout_alignBottom="@+id/textState" android:layout_toRightOf="@+id/textState" android:gravity="center_vertical"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_alignTop="@+id/textDivider" android:layout_toRightOf="@+id/textDivider" android:id="@+id/textInfo" android:lines="1" android:layout_alignBottom="@+id/textDivider" android:gravity="center_vertical" android:text="@string/pony_info"></TextView>
    <!-- <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkBox1" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignBottom="@+id/textInfo" android:focusableInTouchMode="false" android:focusable="false" android:layout_marginRight="5dp"></CheckBox> -->
</RelativeLayout>
